[package]
name = "async_iterator"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
plotters = "0.3.5"
